<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_movies_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/background"
    android:clickable="true"
    android:elevation="2dp"
    android:focusable="true"
    app:layout_constrainedWidth="true">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/bg_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movie_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="2dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="5dp"
        android:src="@drawable/movie_fragment"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bg_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="5dp"
        android:src="@drawable/mask_movie_frag"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviews_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="48dp"
        android:text="@string/reviews_string"
        android:textColor="#6D6D80"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ratingBar_movie"
        app:layout_constraintTop_toBottomOf="@id/genre" />


    <RatingBar
        android:id="@+id/ratingBar_movie"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="42dp"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:rating="4"
        android:scaleX=".6"
        android:scaleY=".6"
        android:theme="@style/MyRatingBar"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toEndOf="@id/root_left_VGL"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/genre_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:text="@string/genre_string"
        android:textColor="#FF3466"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/root_left_VGL"
        app:layout_constraintTop_toBottomOf="@id/avengers" />

    <TextView
        android:id="@+id/movie_naming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|start"
        android:text="@string/movie_name"
        android:textColor="#ECECEC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/movie_duration"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/_137_min_duration"
        android:textColor="#565665"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/reaction"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_aging"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/r_rectangle"
        android:gravity="center"
        android:text="@string/aging_string"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
