<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/movies_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:drawableStart="@drawable/shoot"
        android:drawablePadding="8dp"
        android:text="Movies list"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movies_list_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_fragment" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingTop="3dp"
            android:src="@drawable/movie_fragment" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingTop="3dp"
            android:src="@drawable/mask_movie_frag" />

        <TextView
            android:id="@+id/reviews_m_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="48dp"
            android:text="@string/reviews_string"
            android:textColor="#6D6D80"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/genre" />


        <RatingBar
            android:id="@+id/ratingBar_m_list"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="42dp"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:rating="4"
            android:scaleX=".6"
            android:scaleY=".6"
            android:theme="@style/MyRatingBar"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            app:layout_constraintStart_toEndOf="@id/root_left_VGL"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="60dp"
            android:text="@string/genre_string"
            android:textColor="#FF3466"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@id/root_left_VGL"
            app:layout_constraintTop_toBottomOf="@id/avengers" />

        <TextView
            android:id="@+id/movie_naming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/movie_name"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:text="137 MIN"
            android:textStyle="bold"
            android:textColor="#565665"
            android:layout_marginBottom="8dp"
            android:textSize="8sp" />


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>